module8_homework/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cncamp-server
  name: cncamp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cncamp-server
  template:
    metadata:
      labels:
        app: cncamp-server
    spec:
      containers:
        - name: cncamp-server
          image: julianchu/cncamp-go-server:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
