module8_homework/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cncamp
spec:
  type: NodePort
  selector:
    app: cncamp
  ports:
    - port: 8000
      nodePort: 30590
