module8_homework/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cncamp-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/cncamp"
            backend:
              service:
                name: cncamp
                port:
                  number: 8000
